# sello

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  vercel.json
.gemini/: CONTEXT.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/middleware/: mpp-charge.ts
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo  vitest.config.mts
apps/web/e2e/: landing.spec.ts  pages.spec.ts
apps/web/src/app/: HomeContent.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/components/: Hero3D.tsx  HeroScene.tsx  (+5 more)
contracts/: Cargo.toml  README.md
contracts/agent-registry/: Cargo.toml
contracts/agent-registry/src/: lib.rs  test.rs
contracts/agent-registry/test_snapshots/test/: test_double_initialize_fails.1.json  test_initialize.1.json  test_list_agents.1.json  test_name_too_long_fails.1.json  test_not_owner_cannot_activate.1.json  test_register_agent.1.json  test_register_duplicate_fails.1.json  test_revoke_agent.1.json  test_revoke_is_terminal.1.json  test_suspend_and_activate.1.json  test_update_capabilities.1.json  test_update_limits.1.json
contracts/attestation-store/: Cargo.toml
contracts/attestation-store/src/: lib.rs
contracts/tier-registry/: Cargo.toml
contracts/tier-registry/src/: lib.rs
docs/: budget.md  milestones.md
scripts/: deploy-testnet.ts  seed-testnet.ts
(+22 files in other folders)
