[package]
name = "sello-tier-registry"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SELLO TierRegistry — Defines verification tier configurations for the SELLO protocol"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.3.1" }

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
